# MR-Agent

./: main.py  pyproject.toml  test.ipynb  test2.ipynb
pr_agent/: __init__.py  agent.py  exceptions.py  task.py  types.py
pr_agent/algo/: utils.py
pr_agent/configs/: default.yaml
pr_agent/git_providers/: __init__.py  base.py  github.py  gitlab.py
pr_agent/llm/: exception.py  litellm.py
pr_agent/log/: __init__.py
pr_agent/prompting/: prompt_generator.py  prompts.py  utils.py
pr_agent/task_inference/: base.py  preprocessing.py
pr_agent/utils/: __init__.py  configs.py
