[project]
name = "pr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "instructor>=1.7.9",
    "litellm>=1.65.7",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "pygithub>=2.6.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]
